--- a/scraping/championsgg.py.ipynb
+++ b/scraping/championsgg.py.ipynb
@@ -48,8 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -65,7 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('champions.json', 'w') as outfile:\n",
+    "    json.dump(g.json()['data'], outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
