added stats model/routes/controller

--- a/scraping/championsgg.py.ipynb
+++ b/scraping/championsgg.py.ipynb
@@ -67,27 +67,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Champion</th>\n",
+       "      <th>Role</th>\n",
+       "      <th>Win Percent</th>\n",
+       "      <th>Play Percent</th>\n",
+       "      <th>Ban Rate</th>\n",
+       "      <th>Playerbase Avg. Games</th>\n",
+       "      <th>Kills</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Assists</th>\n",
+       "      <th>Largest Killing Spree</th>\n",
+       "      <th>Damage Dealt</th>\n",
+       "      <th>Damage Taken</th>\n",
+       "      <th>Total Healing</th>\n",
+       "      <th>Minions Killed</th>\n",
+       "      <th>Enemy Jungle CS</th>\n",
+       "      <th>Team Jungle CS</th>\n",
+       "      <th>Gold Earned</th>\n",
+       "      <th>Role Position</th>\n",
+       "      <th>Position Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Rank, Champion, Role, Win Percent, Play Percent, Ban Rate, Playerbase Avg. Games, Kills, Deaths, Assists, Largest Killing Spree, Damage Dealt, Damage Taken, Total Healing, Minions Killed, Enemy Jungle CS, Team Jungle CS, Gold Earned, Role Position, Position Change]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open('champions.json', 'w') as outfile:\n",
-    "    json.dump(g.json()['data'], outfile)"
+    "url = 'https://raw.githubusercontent.com/Nyanza/lol-analytics/master/scraping/champions.json';\n",
+    "#can only run this 10 in one hour\n",
+    "g = requests.get(url)\n",
+    "host = \"http://localhost:8000\"\n",
+    "path = '/assets'\n",
+    "x[league][x[league][\"Champion\"] == name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [200]>\n",
-      "<Response [201]>\n",
       "Jax\n",
       "<Response [201]>\n",
       "Sona\n",
@@ -100,9 +161,9 @@
       "<Response [201]>\n",
       "Singed\n",
       "<Response [201]>\n",
-      "TahmKench\n",
+      "Tahm Kench\n",
       "<Response [201]>\n",
-      "Leblanc\n",
+      "LeBlanc\n",
       "<Response [201]>\n",
       "Thresh\n",
       "<Response [201]>\n",
@@ -114,7 +175,7 @@
       "<Response [201]>\n",
       "Udyr\n",
       "<Response [201]>\n",
-      "LeeSin\n",
+      "Lee Sin\n",
       "<Response [201]>\n",
       "Yorick\n",
       "<Response [201]>\n",
@@ -126,7 +187,7 @@
       "<Response [201]>\n",
       "Sivir\n",
       "<Response [201]>\n",
-      "MissFortune\n",
+      "Miss Fortune\n",
       "<Response [201]>\n",
       "Draven\n",
       "<Response [201]>\n",
@@ -142,7 +203,7 @@
       "<Response [201]>\n",
       "Fizz\n",
       "<Response [201]>\n",
-      "KogMaw\n",
+      "Kog'Maw\n",
       "<Response [201]>\n",
       "Maokai\n",
       "<Response [201]>\n",
@@ -178,7 +239,7 @@
       "<Response [201]>\n",
       "Riven\n",
       "<Response [201]>\n",
-      "Chogath\n",
+      "Cho'Gath\n",
       "<Response [201]>\n",
       "Aatrox\n",
       "<Response [201]>\n",
@@ -192,7 +253,7 @@
       "<Response [201]>\n",
       "Alistar\n",
       "<Response [201]>\n",
-      "XinZhao\n",
+      "Xin Zhao\n",
       "<Response [201]>\n",
       "Lucian\n",
       "<Response [201]>\n",
@@ -212,7 +273,7 @@
       "<Response [201]>\n",
       "Rammus\n",
       "<Response [201]>\n",
-      "Velkoz\n",
+      "Vel'Koz\n",
       "<Response [201]>\n",
       "Caitlyn\n",
       "<Response [201]>\n",
@@ -284,11 +345,11 @@
       "<Response [201]>\n",
       "Kled\n",
       "<Response [201]>\n",
-      "Khazix\n",
+      "Kha'Zix\n",
       "<Response [201]>\n",
       "Olaf\n",
       "<Response [201]>\n",
-      "TwistedFate\n",
+      "Twisted Fate\n",
       "<Response [201]>\n",
       "Nunu\n",
       "<Response [201]>\n",
@@ -300,7 +361,7 @@
       "<Response [201]>\n",
       "Ivern\n",
       "<Response [201]>\n",
-      "MonkeyKing\n",
+      "Wukong\n",
       "<Response [201]>\n",
       "Ashe\n",
       "<Response [201]>\n",
@@ -320,7 +381,7 @@
       "<Response [201]>\n",
       "Diana\n",
       "<Response [201]>\n",
-      "AurelionSol\n",
+      "Aurelion Sol\n",
       "<Response [201]>\n",
       "Zyra\n",
       "<Response [201]>\n",
@@ -332,13 +393,13 @@
       "<Response [201]>\n",
       "Twitch\n",
       "<Response [201]>\n",
-      "DrMundo\n",
+      "Dr. Mundo\n",
       "<Response [201]>\n",
       "Orianna\n",
       "<Response [201]>\n",
       "Evelynn\n",
       "<Response [201]>\n",
-      "RekSai\n",
+      "Rek'Sai\n",
       "<Response [201]>\n",
       "Lux\n",
       "<Response [201]>\n",
@@ -346,7 +407,7 @@
       "<Response [201]>\n",
       "Camille\n",
       "<Response [201]>\n",
-      "MasterYi\n",
+      "Master Yi\n",
       "<Response [201]>\n",
       "Ryze\n",
       "<Response [201]>\n",
@@ -356,38 +417,56 @@
       "<Response [201]>\n",
       "Shen\n",
       "<Response [201]>\n",
-      "JarvanIV\n",
+      "Jarvan IV\n",
       "<Response [201]>\n",
       "Malzahar\n",
       "<Response [201]>\n",
       "Zac\n",
       "<Response [201]>\n",
-      "Gragas\n"
+      "Gragas\n",
+      "<Response [201]>\n"
      ]
     }
    ],
    "source": [
-    "print(g)\n",
     "\n",
-    "for champ in g.json()['data']:\n",
+    "leagues = [\"bronze\", \"silver\", \"gold\", \"plat\", \"platplus\"]\n",
+    "x = {}\n",
+    "for league in leagues:\n",
+    "    x[league] = pd.read_csv(league+\".csv\")\n",
+    "    \n",
+    "for champ in g.json():\n",
     "    headers = {'Content-type': 'application/json', 'Accept': 'text/plain'}\n",
-    "    p = requests.post(host+\"/api/v1/champions/\", data=json.dumps(g.json()['data'][champ]), headers=headers)\n",
-    "    print(p)\n",
+    "    p = requests.post(\"http://localhost:8000/api/v1/champions/\", data=json.dumps(g.json()[champ]), headers=headers)\n",
     "    champId = p.json()[\"id\"]\n",
     "    key = p.json()['key']\n",
+    "    name = p.json()['name']\n",
     "    urls = { 'square': '', 'loading': [], 'splash': []}\n",
     "    urls['square'] = path + '/square/' + key + '.png'\n",
-    "    for skin in g.json()['data'][champ]['skins']:\n",
+    "    for skin in g.json()[champ]['skins']:\n",
     "        ext = key + '_' + str(skin['num'])  + '.jpg'\n",
     "        urls['loading'].append(path + '/loading/' + ext)\n",
     "        urls['splash'].append(path + '/loading/' + ext)\n",
     "    p2 = requests.post(host+'/api/v1/assets/images/champions/', data=json.dumps({'championId':champId, 'name':key, 'loading': urls['loading'], 'square': urls['square'], 'splash': urls['splash']}), headers=headers)\n",
-    "    for spell in g.json()['data'][champ]['spells']:\n",
+    "    for spell in g.json()[champ]['spells']:\n",
     "        spell['championId'] = champId\n",
     "        p3 = requests.post(host+'/api/v1/spells/', data=json.dumps(spell), headers=headers)\n",
-    "    print(key)    \n",
-    "    \n",
-    "\n"
+    "\n",
+    "    for league in leagues:\n",
+    "        df = x[league][x[league][\"Champion\"] == name]\n",
+    "        if df.empty:\n",
+    "            continue\n",
+    "        stats = {}\n",
+    "        stats[\"champion\"] = df.iloc[-1][\"Champion\"]\n",
+    "        stats[\"role\"] = df.iloc[-1][\"Role\"]\n",
+    "        stats[\"winPercent\"] = df.iloc[-1][\"Win Percent\"]\n",
+    "        stats[\"playPercent\"] = df.iloc[-1][\"Play Percent\"]\n",
+    "        stats[\"banRate\"] = df.iloc[-1][\"Ban Rate\"]\n",
+    "        stats[\"league\"] = league\n",
+    "        stats[\"championId\"] = champId\n",
+    "        p4 = requests.post(host+'/api/v1/stats/', data=json.dumps(stats), headers=headers)\n",
+    "    print(name)\n",
+    "    print(p4)"
    ]
   },
   {
