added spells to champ details call.

--- a/scraping/init.ipynb
+++ b/scraping/init.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -20,8 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from os import listdir\n",
@@ -36,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import operator\n",
@@ -46,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -356,16 +360,18 @@
     "        skin['loading'] = path + '/loading/' + ext\n",
     "        skin['splash'] = path + '/splash/' + ext\n",
     "    info['skins'] = skins\n",
-    "    p = requests.post(host+\"/api/v1/champions/\", data=json.dumps(info), headers=headers)\n",
-    "    \n",
-    "    champId = p.json()[\"id\"]\n",
-    "    #p2 = requests.post(host+'/api/v1/assets/images/champions/', data=json.dumps({'championId':champId, 'name':key, 'loading': urls['loading'], 'square': urls['square'], 'splash': urls['splash']}), headers=headers)\n",
+    "    counter = 0\n",
+    "    spells = {'q': {}, 'w': {}, 'e': {}, 'r': {}}\n",
     "    for spell in info['spells']:\n",
-    "        spell['championId'] = champId\n",
-    "        spell['image'] = skill_images\n",
-    "        p3 = requests.post(host+'/api/v1/spells/', data=json.dumps(spell), headers=headers)\n",
+    "        skill = 'qwer'[counter]\n",
+    "        spells[skill]['image'] = skill_images[counter]\n",
+    "        spells[skill]['description'] = spell['description']\n",
+    "        spells[skill]['name'] = spell['name']\n",
+    "        counter += 1\n",
+    "    info['spells'] = spells\n",
+    "    p = requests.post(host+\"/api/v1/champions/\", data=json.dumps(info), headers=headers)\n",
     "    print(name)\n",
-    "    print(p3)\n",
+    "    print(p)\n",
     "    \n",
     "counter = 0\n",
     "for name, info in sorted_champ:\n",
@@ -1581,21 +1587,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4: 1, 5: 1}\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "coins = [3, 3, 3, 3, 4, 4]\n",
+    "def find_genuine(l):\n",
+    "    g = {}\n",
+    "    for i in range(0, len(l)):\n",
+    "        for j in range(i, len(l)):\n",
+    "            if l[i] > l[j]:\n",
+    "                g[i] = 1\n",
+    "            elif l[i] < l[j]:\n",
+    "                g[j] = 1\n",
+    "    print(g)\n",
+    "find_genuine(coins)"
+   ]
   },
   {
    "cell_type": "code",
