removed pandas import from initdb.py

--- a/scraping/init.ipynb
+++ b/scraping/init.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -51,289 +51,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aatrox\n",
-      "<Response [201]>\n",
-      "Ahri\n",
-      "<Response [201]>\n",
-      "Akali\n",
-      "<Response [201]>\n",
-      "Alistar\n",
-      "<Response [201]>\n",
-      "Amumu\n",
-      "<Response [201]>\n",
-      "Anivia\n",
-      "<Response [201]>\n",
-      "Annie\n",
-      "<Response [201]>\n",
-      "Ashe\n",
-      "<Response [201]>\n",
-      "Aurelion Sol\n",
-      "<Response [201]>\n",
-      "Azir\n",
-      "<Response [201]>\n",
-      "Bard\n",
-      "<Response [201]>\n",
-      "Blitzcrank\n",
-      "<Response [201]>\n",
-      "Brand\n",
-      "<Response [201]>\n",
-      "Braum\n",
-      "<Response [201]>\n",
-      "Caitlyn\n",
-      "<Response [201]>\n",
-      "Camille\n",
-      "<Response [201]>\n",
-      "Cassiopeia\n",
-      "<Response [201]>\n",
-      "Cho'Gath\n",
-      "<Response [201]>\n",
-      "Corki\n",
-      "<Response [201]>\n",
-      "Darius\n",
-      "<Response [201]>\n",
-      "Diana\n",
-      "<Response [201]>\n",
-      "Dr. Mundo\n",
-      "<Response [201]>\n",
-      "Draven\n",
-      "<Response [201]>\n",
-      "Ekko\n",
-      "<Response [201]>\n",
-      "Elise\n",
-      "<Response [201]>\n",
-      "Evelynn\n",
-      "<Response [201]>\n",
-      "Ezreal\n",
-      "<Response [201]>\n",
-      "Fiddlesticks\n",
-      "<Response [201]>\n",
-      "Fiora\n",
-      "<Response [201]>\n",
-      "Fizz\n",
-      "<Response [201]>\n",
-      "Galio\n",
-      "<Response [201]>\n",
-      "Gangplank\n",
-      "<Response [201]>\n",
-      "Garen\n",
-      "<Response [201]>\n",
-      "Gnar\n",
-      "<Response [201]>\n",
-      "Gragas\n",
-      "<Response [201]>\n",
-      "Graves\n",
-      "<Response [201]>\n",
-      "Hecarim\n",
-      "<Response [201]>\n",
-      "Heimerdinger\n",
-      "<Response [201]>\n",
-      "Illaoi\n",
-      "<Response [201]>\n",
-      "Irelia\n",
-      "<Response [201]>\n",
-      "Ivern\n",
-      "<Response [201]>\n",
-      "Janna\n",
-      "<Response [201]>\n",
-      "Jarvan IV\n",
-      "<Response [201]>\n",
-      "Jax\n",
-      "<Response [201]>\n",
-      "Jayce\n",
-      "<Response [201]>\n",
-      "Jhin\n",
-      "<Response [201]>\n",
-      "Jinx\n",
-      "<Response [201]>\n",
-      "Kalista\n",
-      "<Response [201]>\n",
-      "Karma\n",
-      "<Response [201]>\n",
-      "Karthus\n",
-      "<Response [201]>\n",
-      "Kassadin\n",
-      "<Response [201]>\n",
-      "Katarina\n",
-      "<Response [201]>\n",
-      "Kayle\n",
-      "<Response [201]>\n",
-      "Kayn\n",
-      "<Response [201]>\n",
-      "Kennen\n",
-      "<Response [201]>\n",
-      "Kha'Zix\n",
-      "<Response [201]>\n",
-      "Kindred\n",
-      "<Response [201]>\n",
-      "Kled\n",
-      "<Response [201]>\n",
-      "Kog'Maw\n",
-      "<Response [201]>\n",
-      "LeBlanc\n",
-      "<Response [201]>\n",
-      "Lee Sin\n",
-      "<Response [201]>\n",
-      "Leona\n",
-      "<Response [201]>\n",
-      "Lissandra\n",
-      "<Response [201]>\n",
-      "Lucian\n",
-      "<Response [201]>\n",
-      "Lulu\n",
-      "<Response [201]>\n",
-      "Lux\n",
-      "<Response [201]>\n",
-      "Malphite\n",
-      "<Response [201]>\n",
-      "Malzahar\n",
-      "<Response [201]>\n",
-      "Maokai\n",
-      "<Response [201]>\n",
-      "Master Yi\n",
-      "<Response [201]>\n",
-      "Miss Fortune\n",
-      "<Response [201]>\n",
-      "Wukong\n",
-      "<Response [201]>\n",
-      "Mordekaiser\n",
-      "<Response [201]>\n",
-      "Morgana\n",
-      "<Response [201]>\n",
-      "Nami\n",
-      "<Response [201]>\n",
-      "Nasus\n",
-      "<Response [201]>\n",
-      "Nautilus\n",
-      "<Response [201]>\n",
-      "Nidalee\n",
-      "<Response [201]>\n",
-      "Nocturne\n",
-      "<Response [201]>\n",
-      "Nunu\n",
-      "<Response [201]>\n",
-      "Olaf\n",
-      "<Response [201]>\n",
-      "Orianna\n",
-      "<Response [201]>\n",
-      "Ornn\n",
-      "<Response [201]>\n",
-      "Pantheon\n",
-      "<Response [201]>\n",
-      "Poppy\n",
-      "<Response [201]>\n",
-      "Quinn\n",
-      "<Response [201]>\n",
-      "Rakan\n",
-      "<Response [201]>\n",
-      "Rammus\n",
-      "<Response [201]>\n",
-      "Rek'Sai\n",
-      "<Response [201]>\n",
-      "Renekton\n",
-      "<Response [201]>\n",
-      "Rengar\n",
-      "<Response [201]>\n",
-      "Riven\n",
-      "<Response [201]>\n",
-      "Rumble\n",
-      "<Response [201]>\n",
-      "Ryze\n",
-      "<Response [201]>\n",
-      "Sejuani\n",
-      "<Response [201]>\n",
-      "Shaco\n",
-      "<Response [201]>\n",
-      "Shen\n",
-      "<Response [201]>\n",
-      "Shyvana\n",
-      "<Response [201]>\n",
-      "Singed\n",
-      "<Response [201]>\n",
-      "Sion\n",
-      "<Response [201]>\n",
-      "Sivir\n",
-      "<Response [201]>\n",
-      "Skarner\n",
-      "<Response [201]>\n",
-      "Sona\n",
-      "<Response [201]>\n",
-      "Soraka\n",
-      "<Response [201]>\n",
-      "Swain\n",
-      "<Response [201]>\n",
-      "Syndra\n",
-      "<Response [201]>\n",
-      "Tahm Kench\n",
-      "<Response [201]>\n",
-      "Taliyah\n",
-      "<Response [201]>\n",
-      "Talon\n",
-      "<Response [201]>\n",
-      "Taric\n",
-      "<Response [201]>\n",
-      "Teemo\n",
-      "<Response [201]>\n",
-      "Thresh\n",
-      "<Response [201]>\n",
-      "Tristana\n",
-      "<Response [201]>\n",
-      "Trundle\n",
-      "<Response [201]>\n",
-      "Tryndamere\n",
-      "<Response [201]>\n",
-      "Twisted Fate\n",
-      "<Response [201]>\n",
-      "Twitch\n",
-      "<Response [201]>\n",
-      "Udyr\n",
-      "<Response [201]>\n",
-      "Urgot\n",
-      "<Response [201]>\n",
-      "Varus\n",
-      "<Response [201]>\n",
-      "Vayne\n",
-      "<Response [201]>\n",
-      "Veigar\n",
-      "<Response [201]>\n",
-      "Vel'Koz\n",
-      "<Response [201]>\n",
-      "Vi\n",
-      "<Response [201]>\n",
-      "Viktor\n",
-      "<Response [201]>\n",
-      "Vladimir\n",
-      "<Response [201]>\n",
-      "Volibear\n",
-      "<Response [201]>\n",
-      "Warwick\n",
-      "<Response [201]>\n",
-      "Xayah\n",
-      "<Response [201]>\n",
-      "Xerath\n",
-      "<Response [201]>\n",
-      "Xin Zhao\n",
-      "<Response [201]>\n",
-      "Yasuo\n",
-      "<Response [201]>\n",
-      "Yorick\n",
-      "<Response [201]>\n",
-      "Zac\n",
-      "<Response [201]>\n",
-      "Zed\n",
-      "<Response [201]>\n",
-      "Ziggs\n",
-      "<Response [201]>\n",
-      "Zilean\n",
-      "<Response [201]>\n",
-      "Zyra\n",
-      "<Response [201]>\n"
+      "platplus\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-2e2938d1749e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mcounter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted_champ\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0minsert_to_db\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0mcounter\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-28-2e2938d1749e>\u001b[0m in \u001b[0;36minsert_to_db\u001b[0;34m(name, info, counter)\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleague\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mstat\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlane\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m                     \u001b[0mstat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0minfo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'metrics'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'p'"
      ]
     }
    ],
@@ -347,7 +84,7 @@
     "    skill_images = metrics.pop('skillImages', None)\n",
     "    for metric in metrics:\n",
     "        for league in metrics:\n",
-    "            for lane in league:\n",
+    "            for lane in metrics[league]:\n",
     "                for stat in lane:\n",
     "                    stat = round(float(stat), 1)\n",
     "    print(metrics)\n",
