--- a/scraping/init.ipynb
+++ b/scraping/init.ipynb
@@ -1331,27 +1331,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{4: 1, 5: 1}\n"
+      "[0, 0, 0, 0, 5, 6, 5, 6, 5, 6, 5, 6]\n"
      ]
     }
    ],
    "source": [
-    "coins = [3, 3, 3, 3, 4, 4]\n",
+    "coins = [4, 3, 3, 3, 3, 4, 4]\n",
     "def find_genuine(l):\n",
-    "    g = {}\n",
+    "    g = []\n",
     "    for i in range(0, len(l)):\n",
     "        for j in range(i, len(l)):\n",
     "            if l[i] > l[j]:\n",
-    "                g[i] = 1\n",
+    "                g.append(i)\n",
     "            elif l[i] < l[j]:\n",
-    "                g[j] = 1\n",
+    "                g.append(j)\n",
+    "            #else:\n",
+    "              #  if g: \n",
+    "                    #g.pop()\n",
     "    print(g)\n",
     "find_genuine(coins)"
    ]
@@ -1374,6 +1377,24 @@
    ],
    "source": [
     "round(45.34531, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid token (<ipython-input-45-4a337a9e38cd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-4a337a9e38cd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int(0500)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
+     ]
+    }
+   ],
+   "source": [
+    "int(0500)"
    ]
   },
   {
