win_rate => Win Rate

--- a/scraping/init.ipynb
+++ b/scraping/init.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -338,6 +338,7 @@
     }
    ],
    "source": [
+    "\n",
     "def insert_to_db(name, info, counter):\n",
     "    key = info['key'] #get champ key\n",
     "    name = info['name'] #get champ name\n",
@@ -349,16 +350,21 @@
     "            if 'http' not in lane:\n",
     "                for x in metrics[league][lane][\"build\"]:\n",
     "                    x[\"img\"] = x[\"src\"]\n",
-    "                    x[\"src\"] = None\n",
+    "                    x.pop('src', None)\n",
+    "                if \"counters\" in metrics[league][lane]:\n",
+    "                    for y in metrics[league][lane][\"counters\"]:\n",
+    "                        for counter in metrics[league][lane][\"counters\"][y]:\n",
+    "                            counter[\"Win Rate\"] = counter[\"win_rate\"]\n",
+    "                            counter.pop('win_rate', None)\n",
     "    skill_images = metrics.pop('skillImages', None)\n",
     "    info['metrics'] = metrics\n",
     "    default_metrics = {}\n",
     "    for lane in metrics[\"platplus\"]:\n",
     "        default_lane = lane\n",
     "        break\n",
-    "    default_metrics['Win Rate'] = metrics[\"platplus\"][default_lane][\"stats\"].pop('Win Rate', None)\n",
-    "    default_metrics['Play Rate'] = metrics[\"platplus\"][default_lane][\"stats\"].pop('Pick Rate', None)\n",
-    "    default_metrics['Ban Rate'] = metrics[\"platplus\"][default_lane][\"stats\"].pop('Ban Rate', None)\n",
+    "    default_metrics['Win Rate'] = metrics[\"platplus\"][default_lane][\"stats\"]['Win Rate']\n",
+    "    default_metrics['Play Rate'] = metrics[\"platplus\"][default_lane][\"stats\"]['Pick Rate']\n",
+    "    default_metrics['Ban Rate'] = metrics[\"platplus\"][default_lane][\"stats\"]['Ban Rate']\n",
     "    info['defaultMetrics'] = default_metrics\n",
     "    info['squareImg'] = square_path + '/' + key + '.png'\n",
     "    skins = info['skins']\n",
